<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/main_btn_adauga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_adauga" />

    <Button
        android:id="@+id/main_btn_lista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_lista" />

    <Button
        android:id="@+id/main_btn_sincronizare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_sincronizare" />

    <Button
        android:id="@+id/main_btn_grafic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_grafic" />

</LinearLayout>